log
 tests:  0|5
total_score: 0/70
a86f043
 tests:  2|4
total_score: 15/70
a86f043
Fri 05 May 2023 06:18:37 PM UTC: 
 tests:  2|4
total_score: 15/70
3ebb82a
Fri 05 May 2023 06:19:47 PM UTC: 
 sudoku.c | 51 ++++++++++++++++++++++++++++++++++++++++++++-------
 1 file changed, 44 insertions(+), 7 deletions(-)
 tests:  2|4
total_score: 15/70
fcb4cb1
Fri 05 May 2023 06:20:11 PM UTC: 
 sudoku.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  2|4
total_score: 15/70
a6c3c85
Fri 05 May 2023 06:42:06 PM UTC: 
 sudoku.c | 64 +++++++++++++++++++++++++---------------------------------------
 1 file changed, 25 insertions(+), 39 deletions(-)
test.c: In function ‘is_valid’:
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
test.c:263: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
c4f4746
